Fixed profile description and styled so not behind nav bar.

--- a/vite-project-1/src/styles/LandingPage.scss
+++ b/vite-project-1/src/styles/LandingPage.scss
@@ -12,3 +12,10 @@ img{
   align-items: center;
   width:88%;
 }
+
+.profile-description{
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  margin-top: 10rem;
+}
